WEBAPP-4: added height to category thumbnails to prevent the layout to collapse if the thumbnails haven't been loaded yet

--- a/src/components/Content/CategoriesTable.css
+++ b/src/components/Content/CategoriesTable.css
@@ -3,8 +3,7 @@
 .thumbnail {
   display: block;
   width: 150px;
-  max-width: 100%;
-  max-height: 100%;
+  height: 150px;
   margin: 0 auto;
   transition: transform 0.2s;
 }
